--- a/Projects/index.html
+++ b/Projects/index.html
@@ -33,7 +33,7 @@
           <img src="images/artPlaVisages3.png">
         </div>
         <div class="item">
-          <img src="images/captures.PNG">
+          <img src="images/qrCodes.jpg">
         </div>
         <div class="item">
           <img src="images/jeu.jpg">
@@ -45,7 +45,7 @@
           <img src="images/screen.jpg">
         </div>
         <div class="item"><!-- CODE WARS -->
-          <img src="images/logoCodewars.PNG">
+          <img src="images/codewars.PNG">
         </div>
         <div class="item"><!-- GITHUB -->
           <img src="images/githubLogo.png">
@@ -153,6 +153,8 @@
         <BR>
         <img src="images/codewars.PNG"/>
     </div>
+
+
     <div class="page" id="page9">
       <h1>Mon github</h1>
       <p><a href="https://github.com/" target="_blank">GITHUB</a> est un logiciel permettant l'hébergement à la collaboration de fichiers de programmations.<br> Le code de mes projets est disponible dessus !
@@ -160,6 +162,51 @@
         <BR>
         <img src="images/githubPage.PNG"/>
     </div>
+
+    <div class="page" id="page4">
+      <h1>Projets art : Les QR codes cachées</h1>
+      <p>Pour la réalisation d'un projet d'art, avec pour but, une oeuvre qui fait participer le spectateur<br> J'ai réalisé 9 QR codes reliant à 9 tableaux différents.<br>Ces 9 tableaux sont modifiables par leurs couleurs. Le spectateur choisi qu'elle case modifier. <br>Une fois cela fait, Les 9 tableaux sont fusionnées pour n'en former qu'un que sera l'oeuvre.<br> Les 9 QR codes sont cachées dans le lycée </p>
+        <BR>
+        <img src="images/captures.PNG"/>
+        <br>
+        <p>Ceci représente le tableau le premier jour ou a été exposé l'oeuvre</p>
+        l'oeuvre complète d'aujourd'hui est disponible <a href="https://isaacmenard.github.io/artprojet2/affichageAll.html" target="_blank">ICI</a>
+        <br><br><br>
+    </div>
+
+
+    <div class="page" id="page5">
+      <h1>Mon prototype de jeu : </h1>
+      <p class="c12"><span class="c23"><br>C&rsquo;est un jeu de soci&eacute;t&eacute; de deck building et de strat&eacute;gie. Il peut tr&egrave;s bien &ecirc;tre jou&eacute; par des enfants</span><span class="c23 c26">&nbsp;</span><span
+          class="c23">Nous sommes des entra&icirc;neurs de volley et souhaitons gagner un match avec notre &eacute;quipe. C&rsquo;est donc un jeu un contre un.</span><span class="c23"><br>Pour cela nous devons d&rsquo;abord choisir comment
+          entra&icirc;ner nos joueurs en s&rsquo;appuyant sur la strat&eacute;gie de l&rsquo;autre et dans un second temps faire le match et bien s&ucirc;r le gagner<br><br>2 phases &nbsp;:<br><br>Le premier notre deckbuilding : les joueurs devront aller
+          au &ldquo;march&eacute;&rdquo; qui correspond &agrave; l&#39;entra&icirc;nement pour cr&eacute;er une pile par joueurs (il y en a 6)<br>Par exemple, un d&eacute;fenseur peut choisir de s&#39;entra&icirc;ner &agrave; la manchette. Il aura donc
+          un bon deck de d&eacute;fense mais ne sera pas forc&eacute;ment bon pour faire des passes.<br><br>A quoi ressemble une pile de joueurs ? <br>Il y a 4 cat&eacute;gories de cartes : <br>- de D&eacute;fense, pour but de renvoyer au passeur les ballons difficiles<br>-
+          d&rsquo;Attaque, pour but de renvoyer de fa&ccedil;on difficile mais des balles faciles<br>- de Passe, pour but de cr&eacute;er des balles faciles pour les attaquants<br>- et de service, pour but d&rsquo;introduire le match. Cependant cette pile sera commune a tous les joueurs<br><br>Toutes ces cat&eacute;gories sont divis&eacute;s en 3 types : <br>- Rat&eacute; &rarr; Le point est perdu<br>- Al&eacute;atoire &rarr; Le ballon va sur un joueur
+          d&eacute;sign&eacute; al&eacute;atoirement<br>- R&eacute;ussi &rarr; le joueur choisi vers qui va le ballon<br><br>Ces cat&eacute;gories ont 3 types de pr&eacute;cisions permettant le deck building num&eacute;rot&eacute; de 1 &agrave; 3 : Si la
+          pr&eacute;cision d&rsquo;une passe est de 3, il sera plus simple pour l&rsquo;attaquant de tirer. Il piochera alors 3 cartes de sa pile attaque et en choisira une. En revanche, si la pr&eacute;cision est mauvaise et est donc
+          num&eacute;rot&eacute;e &agrave; 1, il ne pourra alors que piocher 1 carte. La probabilit&eacute; de rater est donc plus &eacute;lev&eacute;e.<br>Cette pr&eacute;cision s&rsquo;applique aussi pour le service et l&rsquo;attaquant, plus le tir
+          est pr&eacute;cis, moins l&rsquo;adversaire pourra piocher de cartes. &nbsp;[sch&eacute;ma des cartes]<br><br>Le deuxi&egrave;me : le match <br>Les 12 joueurs (6 contre 6) seront plac&eacute;s sur le jeu en face. [sch&eacute;ma plateau]<br>Le
+          ballon sera incarn&eacute; par un pion. Le but est d&rsquo;avoir 25 points et donc de forcer l&rsquo;adversaire &agrave; rater son coup. <br>Le joueur commence par piocher une carte service. Si le tir est r&eacute;ussi en fonction de la carte
+          pioch&eacute;e, il peut choisir sur quel joueur le ballon va arriver en pla&ccedil;ant le pion sur la pile concern&eacute;e. Si la carte pioch&eacute;e est al&eacute;atoire, un d&eacute; est lanc&eacute; pour savoir o&ugrave; le ballon va
+          atterrir. &nbsp; <br>En revanche, si la carte est marqu&eacute;e Rat&eacute;, le point est perdu. <br>Une fois le ballon envoy&eacute; du c&ocirc;t&eacute; adverse, c&#39;est autour de l&rsquo;adversaire de jouer. Il a le droit de faire passer
+          le ballon &agrave; un maximum de 3 joueurs. La meilleure combinaison est la r&eacute;ception du d&eacute;fenseur qui est parfois al&eacute;atoire mais qui permet une passe &agrave; un autre joueur, qui la renvoie de mani&egrave;re parfaite
+          &agrave; un attaquant pour &ecirc;tre renvoy&eacute; dans le camp adverse avec la plus grande </span></p>
+          <h3>IMAGES : </h3>
+          <img src="imagesGameplay/image3.png"/>   <img src="imagesGameplay/image10.png"/>   <img src="imagesGameplay/image8.png"/>   <img src="imagesGameplay/image9.png"/>   <img src="imagesGameplay/image12.png"/>
+  <img src="imagesGameplay/image14.png"/>   <img src="imagesGameplay/image15.png"/>
+    </div>
+
+    <div class="page" id="page6">
+      <h1>Mes dessins</h1>
+      <p>J'utilise pour dessiner une tablette graphique sur photoshop, voici quelques unes de mes réalisations : </p>
+        <BR>
+        <img src="images/5.png"/>  <img src="images/dictateur.png"/>
+        <br><br><br>
+    </div>
+
+
+
     </div>
   </body>
 
