--- a/Projects/index.html
+++ b/Projects/index.html
@@ -75,10 +75,13 @@
         <h1>MOI</h1>
         <p>Je suis Isaac Ménard, élève en Terminale au Lycée Pilote Innovant International,
           <br>en spécialité Mathématiques <i class="fas fa-square-root-alt"></i> et Arts plastiques <i class="fas fa-palette"></i>.</p>
-        <br><br>
+        <br>
         <h1><i class="fas fa-fire"></i></h1>
-        <p>Je suis aussi Sapeur pompier volontaire !<br> A la caserne de Poitiers la Blaiserie depuis maintenant 2 ans.
-      </div>
+        <p>Je suis aussi Sapeur pompier volontaire !  1ère classe à la caserne de la blaiserie de Poitiers depuis 2019.<br> Plus de 100 interventions réalisées. Ce volontariat fait suite à 3 ans de formation comme jeune sapeur pompier (JSP).<br></p>
+        <br>
+        <h1><i class="fas fa-brain"></i></h1>
+        Je suis passionné d’escalade (membre du club de l’ALMA Escalade et de la maison de l’escalade de Poitiers « the Roof ») et de jeux de sociétés (fidèle du festival ludique international de Partenay (FLIP))
+      <br>  <br>  <br>  </div>
 
 
       <div class="page" id="page1">
@@ -87,8 +90,10 @@
           PHP <i class="fab fa-php"></i> et MYSQL <i class="fas fa-database"></i> pendant une période de 2 ans.<br>
           <br><br> </p>
         <h1><i class="fas fa-chess-rook"></i></h1>
-        <p>Plusieurs prototypes on été essayé avec l'utilisation de <a href="https://nodejs.org/en/" target="_blank">Node JS</a> pour permettre une meilleur rapidité <br>
-          lors du jeu en ligne ainsi que de la bibliothèque <a href="https://phaser.io/" target="_blank">PHASER</a>.</p>
+        <p>Plusieurs prototypes on été développés avec l'utilisation de <a href="https://nodejs.org/en/" target="_blank">Node JS</a> pour permettre une meilleur rapidité <br>
+          lors du jeu en ligne mais également avec l’utilisation de la bibliothèque<a href="https://phaser.io/" target="_blank">PHASER</a>.</p>
+        <br><bR>
+        Plusieurs itérations du jeu ont eu lieu grâce à des remontées de beta-testeurs de ma communauté. Plusieurs graphistes ont collaborés à mon projet.
         <br><br>
         <h1> <i class="fas fa-dungeon"></i></h1>
         <p>A se jour, le jeu a été testé par plus de 250 joueurs -- <a href="https://donjonsansdragon.space/" target="_blank">Y jouer mainteant </a>!</p>
@@ -104,25 +109,23 @@
         <p>Mais Imaginez cela pendant le premier confinement du covid 19 !</p>
         <br><br>
         <h1> <i class="fas fa-hamburger"></i></h1>
-        <p>Le covid market est un jeu ou vous devrez ne pas vous laisser submerger par la panique de voir la pénurie arriver !<br> Vous vous en sentez capable ? <a target="_blank" href="https://isaacmenard.github.io/superMarketCovid19/"> testez ici !
+        <p>Le covid market est un jeu ou vous devrez ne pas vous laisser submerger par la panique  en voyant la pénurie de produits arriver !<br>
+Prêt pour une expérience ?<a target="_blank" href="https://isaacmenard.github.io/superMarketCovid19/"> testez ici !
           </a>!</p>
       </div>
 
 
       <div class="page" id="page3">
         <h1>PROJET ART : Génération de visages aléatoires</h1>
-        <p>Dans le cadre d'un projet d'art au lycée, nous devions présenter un projet sur le hasard</p>
-
+        <p>Dans le cadre d'un projet d'art en cours de spécialité , nous devions présenter une oeuvre sur le hasard. <br>J’ai choisi de travailler sur une expérience numérique interactive relative aux hasards de l’évolution humaine.</p>
+<p>L'objectif de l’expérience pour l’utilisateur va être de choisir des personnes qui vont se rencontrer afin d’observer le visage de l’être à qui ils vont donner naissance. La génération repose sur un algorithme mêlant les caractéristiques des parents mais également le hasard.</p>
         <p class="c1"><span class="c2"></span></p>
         <p class="c4"><span class="c2">Inspir&eacute; du livre MONDIALE de Beb-deum, cette oeuvre &agrave; pour but de cr&eacute;er un visage ressemblant &agrave; votre personnalit&eacute;, par exemple celui ci :</span></p>
         <p class="c4"><span
             style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"><img alt=""
               src="imagesCartel/image2.png" style="width: 70%; height: auto; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);" title=""></span></p>
         <p class="c1"><span class="c2"></span></p>
-        <p class="c4"><span class="c2">Pour cela l&rsquo;utilisateur vas pouvoir choisir dans un premier temps un homme et une femme qui vont alors cr&eacute;er un nouvel individu en prenant la moyenne des deux personnages (par exemple si l&rsquo;un
-            &agrave; un grand visage et l&rsquo;autre petit, sauf exception du au hasard, l&rsquo;ordinateur choisira un visage de taille moyenne) alors nous aurons un nouvel individu soit homme ou femme et choisirons entre plusieurs personnes du sexe
-            oppos&eacute; g&eacute;n&eacute;r&eacute;s al&eacute;atoirement pour recr&eacute;er un nouvel individu. Ce processus fait une dizaine de fois, nous aurons le droit &agrave; un personnage final ressemblant logiquement &agrave; nos go&ucirc;ts.
-            <br><br>Comment cr&eacute;er un personnage al&eacute;atoirement ? Premi&egrave;rement il faut cr&eacute;er chaque partie du visage et les s&eacute;parer (comme le nez ou la forme du visage&hellip;) </span></p>
+        <p class="c4"><span class="c2">Comment cr&eacute;er un personnage al&eacute;atoirement ? Premi&egrave;rement il faut cr&eacute;er chaque partie du visage et les s&eacute;parer (comme le nez ou la forme du visage&hellip;) </span></p>
         <p class="c4"><span
             style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"><img alt=""
               src="imagesCartel/image3.png" style="width: 70%; height: auto;; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);" title=""></span></p>
@@ -199,6 +202,14 @@
 
     <div class="page" id="page6">
       <h1>Mes dessins</h1>
+      <p>J'utilise pour dessiner une tablette graphique sur photoshop, voici quelques unes de mes réalisations : </p>
+        <BR>
+        <img src="images/5.png"/>  <img src="images/dictateur.png"/>
+        <br><br><br>
+    </div>
+
+    <div class="page" id="page7">
+      <h1>Mes appli</h1>
       <p>J'utilise pour dessiner une tablette graphique sur photoshop, voici quelques unes de mes réalisations : </p>
         <BR>
         <img src="images/5.png"/>  <img src="images/dictateur.png"/>
