--- a/m/projets.html
+++ b/m/projets.html
@@ -14,7 +14,7 @@
 <body>
 	<div class="backgroundProject"></div>
 	<div class="centerNavBAr">
-		<h2><i class="fas fa-plus"></i><br><strong>Playlist</strong></h2>
+		<h2 onclick="window.location = 'https://open.spotify.com/playlist/4607rn6QaRzWnHMv2mlNT5?si=4bd6d35727884d98&nd=1'" ><i class="fas fa-plus"></i><br><strong>Playlist</strong></h2>
 		<div class="middleBox" onclick="window.location = 'index.html'"><h2><i class="fas fa-play"> </i> Back</h2></div>
 		<h2><i class="fas fa-info-circle"></i></i><br><strong>Infomations</strong></h2>
 	</div>
@@ -31,7 +31,7 @@
 		<h2>Others populars projects</h2>
 		<div class="scrollZone">
 			<img  src="temp/adobe poster.png"/>
-			<img onclick="window.location = 'https://isaacmenard.github.io/artprojet2/affichageAll.html'" src="temp/qrcodes.png"/>
+			<img onclick="window.location = 'https://open.spotify.com/playlist/4607rn6QaRzWnHMv2mlNT5?si=4bd6d35727884d98&nd=1'" src="temp/spotify.png"/>
 			<img onclick="window.location = 'https://isaacmenard.github.io/artprojet2/affichageAll.html'" src="temp/qrcodes.png"/>
 			<img onclick="window.location = 'https://isaacmenard.github.io/artprojet2/affichageAll.html'" src="temp/qrcodes.png"/>
 		</div>
