--- a/m/projets.html
+++ b/m/projets.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+	<div class="loadingDiv"><img src="loading.svg"></div>
 	<div class="backgroundProject"></div>
 	<div class="centerNavBAr">
 		<h2 onclick="window.location = 'https://open.spotify.com/playlist/4607rn6QaRzWnHMv2mlNT5?si=4bd6d35727884d98&nd=1'" ><i class="fas fa-plus"></i><br><strong>Playlist</strong></h2>
