--- a/m/parcours.html
+++ b/m/parcours.html
@@ -6,6 +6,7 @@
 <meta />
 	<link rel="stylesheet" media="screen" href="style.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
+			<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
 </head>
 
@@ -14,6 +15,7 @@
 	<div class="centerBox">
 		<h1>PARCOURS</h1>
 		<h1>PAGE EN COURS DE CREATION</h1>
+		<p>Vous pouvez consulter mes <a style="	font-weight: bold;" onclick="window.location = 'projets.html'">PROJETS</a> en attendant ;)</p>
 	</div>
 
 </body>
