--- a/m/parcours.html
+++ b/m/parcours.html
@@ -5,18 +5,38 @@
 <title>Isaac Menard - Portfolio !</title>
 <meta />
 	<link rel="stylesheet" media="screen" href="style.css">
+	<link rel="icon" href="logo.png" />
+	<script type="text/javascript" src="info.json"></script>
+		  <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
 </head>
 
 <body>
-	<img src="logo.png" class="logoIndex">
-	<div class="centerBox">
-		<h1>PARCOURS</h1>
-		<h1>PAGE EN COURS DE CREATION</h1>
-		<p>Vous pouvez consulter mes <a style="	font-weight: bold;" onclick="window.location = 'projets.html'">PROJETS</a> en attendant ;)</p>
+	<div class="backgroundHeader"></div>
+	<div class="header"><i class="fas fa-angle-left icon iconLeft" onclick="window.location = 'index.html'"></i>
+		<img src="temp/spotify.png" class="startTemp">
+		<div class="testUnderImageStartTemp"><i class="fas fa-thumbs-up" style="opacity:100%"></i> <a>2003 PHONE-TV 18-Seasons</a></div>
+		<div class="playButton"><i class="fas fa-play"></i> PLAY</div>
+		<div class="textUnderImage">
+			<h1>S1:E1 Attention, cette page n'est pas encore terminée</h1>
+			<p>Découvrez ici mon parcours et comment j'ai fait pour en arriver là, chaque saison correspond à une catégorie<br>(Série inspiré d'une histoire vrai)</p>
+			<p class="subtitle">Site : Moi même..<br>Histoire : Encore moi...</p>
+		</div>
 	</div>
+	<div class="middleNavMenu">
+		<div class="boxNavMenu"><i class="fab fa-instagram" onclick="window.location = 'https://www.instagram.com/is02ac/'"></i><p>My insta</p></div>
+		<div class="boxNavMenu"><i class="fab fa-github" onclick="window.location = 'https://github.com/isaacmenard'"></i><p>My Github</p></div>
+		<div class="boxNavMenu"><i class="fab fa-spotify" onclick="window.location = 'https://open.spotify.com/user/xss9n2z8cc9mp7rim27q8cus0?si=0e19449131c34c17'"></i><p>My Spotify</p></div>
+	</div>
+	<div class="BodyBoxPacours" id="contenereBoxParcours">
+		<div class="headerBodyBox">
+			<div class="episodes">EPISODES</div>
+			<div class="seasons">SEASONS & MORE</div>
+		</div>
+	</div>
+
 
 </body>
 	<script src="script.js"></script>
