--- a/m/index.html
+++ b/m/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <title>Isaac Menard - Portfolio !</title>
 <meta />
+	<link rel="icon" href="logo.png" />
 	<link rel="stylesheet" media="screen" href="style.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
