--- a/m/projets.html
+++ b/m/projets.html
@@ -5,6 +5,8 @@
 <title>Isaac Menard - Portfolio !</title>
 <meta />
 	<link rel="stylesheet" media="screen" href="style.css">
+		<link rel="icon" href="logo.png" />
+			<script type="text/javascript" src="info.json"></script>
 	  <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
