--- a/m/projets.html
+++ b/m/projets.html
@@ -34,8 +34,8 @@
 		<h2>Others populars projects</h2>
 		<div class="scrollZone">
 			<img  src="temp/adobe poster.png"/>
+			<img onclick="window.location = ''" src="temp/escalade.png"/>
 			<img onclick="window.location = 'https://open.spotify.com/playlist/4607rn6QaRzWnHMv2mlNT5?si=4bd6d35727884d98&nd=1'" src="temp/spotify.png"/>
-			<img onclick="window.location = 'https://isaacmenard.github.io/artprojet2/affichageAll.html'" src="temp/qrcodes.png"/>
 			<img onclick="window.location = 'https://isaacmenard.github.io/artprojet2/affichageAll.html'" src="temp/qrcodes.png"/>
 		</div>
 	</div>
