update project link

--- a/m/projets.html
+++ b/m/projets.html
@@ -26,7 +26,7 @@
 		<div class="scrollZone">
 			<img onclick="window.location = 'https://donjonsansdragon.space'" src="icon/djd.png"/>
 			<img onclick="window.location = 'https://isaacmenard.github.io/superMarketCovid19/'" src="icon/covid.png"/>
-			<img onclick="window.location = 'https://isaacmenard.github.io/NEW%20PORTFOLIO/'" src="icon/plat.png"/>
+			<img onclick="window.location = 'https://gameazon.herokuapp.com/'" src="icon/plat.png"/>
 			<img onclick="window.location = 'https://isaacmenard.github.io/art'" src="icon/face.png"/>
 		</div>
 	</div>
