--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" media="screen" href="style.css">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg whiteColor">
+    <a class="butt" href="#top"><i class="fa-solid fa-arrow-up-long"></i></a>
+    <nav class="navbar navbar-expand-lg whiteColor" id="top">
       <a class="navbar-brand" href="#">ISAAC MENARD</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -92,6 +93,10 @@
         <h1 class="title">One Button game</h1>
         <hr>
         <hr>
+      </div>
+      <div class="ParentBlock">
+        <div class="left"><center>lapin</center></div>
+        <div class="right"><center>lapinou</center></div>
       </div>
 
     </nav>
