--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
-          <i class="fa-brands fa-linkedin"></i>
-          <i class="fa-brands fa-github"></i>
-          <i class="fa-solid fa-at"></i>
+          <a target="_blank" HREF="https://www.linkedin.com/in/isaac-menard-6855a8232/"><i class="fa-brands fa-linkedin"></i></a>
+          <a target="_blank" HREF="https://github.com/isaacmenard"><i class="fa-brands fa-github"></i></a>
+          <a target="_blank" HREF="https://is02ac.itch.io/"><i class="fa-brands fa-itch-io"></i></a>
+          <a target="_blank" HREF="mailto:menardisaac@gmail.com"><i class="fa-solid fa-at"></i></a>
         </form>
       </div>
     </nav>
