--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://kit.fontawesome.com/91949707d8.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Koulen&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Fira+Sans:wght@400&family=Koulen&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" media="screen" href="style.css">
   </head>
@@ -43,9 +43,9 @@
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
-          <a target="_blank" HREF="https://www.linkedin.com/in/isaac-menard-6855a8232/"><i class="fa-brands fa-linkedin"></i></a>
           <a target="_blank" HREF="https://github.com/isaacmenard"><i class="fa-brands fa-github"></i></a>
           <a target="_blank" HREF="https://is02ac.itch.io/"><i class="fa-brands fa-itch-io"></i></a>
+          <a target="_blank" HREF="https://www.linkedin.com/in/isaac-menard-6855a8232/"><i class="fa-brands fa-linkedin"></i></a>
           <a target="_blank" HREF="mailto:menardisaac@gmail.com"><i class="fa-solid fa-at"></i></a>
         </form>
       </div>
@@ -89,26 +89,100 @@
       </div>
     </nav>
     <br>  <br>  <br>   <br>   <br id="OBG">
-    <nav class="Page">
+    <nav class="Page obg">
       <div class="titleContainer">
         <h1 class="title">One Button game</h1>
         <hr>
         <hr>
       </div>
       <div class="ParentBlock">
-        <div class="left"><center>lapin</center></div>
-        <div class="right"><center>lapinou</center></div>
+
+        <div class="left" style="width : 50%"><center>
+          <div id="carouselOBG" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselOBG" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselOBG" data-slide-to="1"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <iframe width="840" height="472.5" src="https://www.youtube.com/embed/A6cgf0pnZmU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
+              <div class="carousel-item">
+                <img id="imgOBG" src="boom.png">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselOBG" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselOBG" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+        </center></div>
+        <div class="right" style="width : 50%"><center>
+          <div class="normalBlock">
+            <h2>SPACE DRIVER</h2>
+            <p>Space driver is a <strong>ONE BUTTON GAME</strong> made at <strong>ISART DIGITAL</strong>. The player plays a car that travels in <strong>space</strong> from planet to planet to solve different problems.</p>
+            <br><a target="_blank" href="https://is02ac.itch.io/space-driver"><button type="button" class="btn btn-warning">Try Here !</button></a>
+          </div>
+        </center></div>
       </div>
 
     </nav>
     <br>  <br>  <br>   <br>   <br id="25D">
-    <nav class="Page">
+    <nav class="Page deux5D">
       <div class="titleContainer">
         <h1 class="title">2.5D</h1>
         <hr>
         <hr>
       </div>
-
+      <div class="ParentBlock">
+      <div class="left" style="width : 40%"><center>
+        <div class="normalBlock">
+          <h2>ROLLER RUSH STREET SHIFT</h2>
+          <p>Roller rush street shift is a <strong>2.5D</strong> game made at <strong>ISART DIGITAL</strong>. </p>
+          <br><a target="_blank" href="https://is02ac.itch.io/roller-rush-street-shift"><button type="button" class="btn btn-warning">Try Here !</button></a>
+        </div>
+      </center></div>
+      <div class="right" style="width : 50%"><center>
+        <div id="carouselRoller" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselRoller" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselRoller" data-slide-to="1"></li>
+            <li data-target="#carouselRoller" data-slide-to="2"></li>
+            <li data-target="#carouselRoller" data-slide-to="3"></li>
+            <li data-target="#carouselRoller" data-slide-to="4"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <iframe width="840" height="472.5" src="https://www.youtube.com/embed/FzA8vtNhid0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="Screens/ospDFG.png" alt="First slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="Screens/alvC9z.png" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="Screens/lobby.png" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="Screens/menu.png" alt="Third slide">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselRoller" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselRoller" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </center></div>
+    </div>
     </nav>
     <br>  <br>  <br>   <br>   <br id="JuiceIt">
     <nav class="Page">
@@ -133,3 +207,13 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </body>
 </html>
+
+<script>
+  $('[id^="carouselRoller"]').carousel({
+    interval: false
+  });
+  $('[id^="carouselOBG"]').carousel({
+    interval: false
+  });
+
+</script>
