feat : project added

--- a/index.html
+++ b/index.html
@@ -257,43 +257,87 @@
         <!-- portfolio section -->
         <div id="portfoliosection" class="sectionblock">
             <div class="container">
+                <div class="abouthero">
+                    <h3 style="white-space: nowrap;text-align: center;">Portfolio</h3>
+                </div>
+                <br><br><br>
                 <div class="row">
-                    <div class="col-lg-12 text-center">
-                        <!-- filter portfolio -->
-                        <div class="warpfilter text-left">
-                            <ul id="filterwrap" class="warpfilter__filter justify-content-left text-center text-lg-left">
-                                <li data-group="all" class="active">All</li>
-                                <li data-group="School">School</li>
-                                <li data-group="Perso">Professionnal</li>
-                                <li data-group="Perso">Personnal</li>
-                            </ul>
+                    <div class="col-lg-3 text-center text-lg-left">
+                        <div class="abouthero">
+                            <h3 style="white-space: nowrap; font-size: 37px">3D brawler</h3>
                         </div>
-                        <!-- end filter portfolio -->
-                        <div id="porfoliowarp" class="grid-gutter-md grid-col-3">
-                            <!--  PORFOLIO ITEM -->
-                            <div class="porfoliowarp__item" data-groups='["School"]'>
-                                <a class="porfoliowarp__portolink glightbox" data-glightbox="type: image" href="./asset/portfolio/1.png">
-                                    <i class="fa-solid fa-circle-plus"></i>
-                                    <div class="porfoliowarp__content" style="background: url(./asset/portfolio/1.png) no-repeat center;  background-position: center;
-                        background-size: cover;"></div>
-                                </a>
-                            </div>
-                            <!-- END PORTFOLIO ITEM -->
-                            <!--  PORFOLIO ITEM -->
-                            <div class="porfoliowarp__item" data-groups='["School"]'>
-                                <a class="porfoliowarp__portolink glightbox" data-glightbox="type: image" href="./asset/portfolio/2.png">
-                                    <i class="fa-solid fa-circle-plus"></i>
-                                    <div class="porfoliowarp__content" style="background: url(./asset/portfolio/2.png) no-repeat center;  background-position: center;
-                        background-size: cover;"></div>
-                                </a>
-                            </div>                           
-                            <!-- END PORTFOLIO ITEM -->
-                        </div>
-                        <a target="_blank" href="https://is02ac.itch.io/" class="btn linkbtn mt-5">
-                            More Works
-                        </a>
+                    </div>
+                    <div class="col-lg-4 pl-lg-5 text-center text-lg-left">
+                        <img src="asset/portfolio/KotaroTitle.png" width="350px" style="background-color: black;border-radius: 4px "/>
+                    </div>
+                    <div class="col-lg-4 pl-lg-6 text-center text-lg-left">
+                        <iframe width="350" height="196.875" style="background-color: black;border-radius: 4px ; margin-left: 64px;" src= "https://www.youtube.com/embed/A6cgf0pnZmU?rel=0&autoplay=1&controls=0&mute=1&loop=1&list=PL7hoLfyucxi7W9ZAdKxkU8wjUWxV1cFGj" frameborder= "0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                    <div class="col-lg-3 text-center text-lg-left"></div>
+                    <div class="col-lg-9 pl-lg-5 text-center text-lg-left">
+                        <br><h4><strong>Kotaro's revenge</strong> </h4>
+                        <p style="font-size: 20px">- A brawler type of game in a 3d city where you need to fight the MEGACORP, an organisation that killed your sensei !</p>
+                        <p style="font-size: 20px">- We were a team of 4 game designers, we have conceptualised the game and the gameplay. I was in charge of the developement and animations of the player. I also created developing tools</p>
+                        <img class="image-icon-little" src="https://cdn-icons-png.flaticon.com/512/5969/5969205.png"/> <img class="image-icon-little" src="https://img.icons8.com/ios-filled/500/autodesk-maya.png"/> <img class="image-icon-little" src="https://cdn-icons-png.flaticon.com/512/25/25231.png"/>
                     </div>
                 </div>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <div class="row">
+                    <div class="col-lg-3 text-center text-lg-left">
+                        <div class="abouthero">
+                            <h3 style=" font-size: 37px">One button game</h3>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 pl-lg-5 text-center text-lg-left">
+                        <img src="asset/portfolio/obgTitle.png" width="350px" style="border-radius: 4px "/>
+                    </div>
+                    <div class="col-lg-4 pl-lg-6 text-center text-lg-left">
+                        <iframe width="350" height="196.875" style="background-color: black;border-radius: 4px ; margin-left: 64px;; margin-bottom: 20px;;" src= "https://www.youtube.com/embed/A6cgf0pnZmU?rel=0&autoplay=1&controls=0&mute=1&loop=1&list=PL7hoLfyucxi4MXDorsNL2ubKc0IrCopHe" frameborder= "0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+
+                    <div class="col-lg-3 text-center text-lg-left"></div>
+                    <div class="col-lg-2 text-center text-lg-left">
+                        <img src="asset/portfolio/obg.png" width="150px" style="border-radius: 4px "/>
+                    </div>
+                    <div class="col-lg-7 pl-lg-5 text-center text-lg-left">
+                        <h4><strong>Space driver</strong> </h4>
+                        <p style="font-size: 20px">- A mobile space game where you need to explore planets generated proceduraly and solves missions</p>
+                        <p style="font-size: 20px">- The game is played with only one input, this was the main challenge of the project !</p>
+                        <img class="image-icon-little" src="https://cdn-icons-png.flaticon.com/512/5969/5969205.png"/> <img class="image-icon-little" src="https://img.icons8.com/ios-filled/500/autodesk-maya.png"/>  <img class="image-icon-little" src="https://cdn-icons-png.flaticon.com/512/731/731965.png"/>
+                    </div>
+                </div>   
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <div class="row">
+                    <div class="col-lg-3 text-center text-lg-left">
+                        <div class="abouthero">
+                            <h3 style="white-space: nowrap; font-size: 37px;;">2.5D Race</h3>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 pl-lg-5 text-center text-lg-left">
+                        <img src="https://img.itch.zone/aW1nLzg4NzA3OTUucG5n/original/ospDFG.png" width="350px" style="background-color: black;border-radius: 4px "/>
+                    </div>
+                    <div class="col-lg-4 pl-lg-6 text-center text-lg-left">
+                        <iframe width="350" height="196.875" style="background-color: black;border-radius: 4px ; margin-left: 64px;" src= "https://www.youtube.com/embed/A6cgf0pnZmU?rel=0&autoplay=1&controls=0&mute=1&loop=1&list=PL7hoLfyucxi4d4FD8_0dlmLSDY_52jxf3" frameborder= "0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                    <div class="col-lg-3 text-center text-lg-left"></div>
+                    <div class="col-lg-9 pl-lg-5 text-center text-lg-left">
+                        <br><h4><strong>Roller rush street shift</strong> </h4>
+                        <p style="font-size: 20px">- A 2.5D game, is a kind of game where the player can only move on 2 dimensions but can go from one plan to another!</p>
+                        <p style="font-size: 20px">- The game is a racing type of game that can be played in multiplayer, where you need to do 3 turns of the track to win.</p>
+                        <p style="font-size: 20px">- It was made with a team of 3 developers, 1 Music and sound designer and 5 game designers</p>
+                        <img class="image-icon-little" src="https://cdn-icons-png.flaticon.com/512/5969/5969205.png"/> <img class="image-icon-little" src="https://img.icons8.com/ios-filled/500/autodesk-maya.png"/> <img class="image-icon-little" src="https://cdn-icons-png.flaticon.com/512/731/731965.png"/> <img class="image-icon-little" src="https://cdn-icons-png.flaticon.com/512/25/25231.png"/>
+                    </div>
+                </div>           
             </div>
         </div>
         <!-- end portfolio section -->
