--- a/index.html
+++ b/index.html
@@ -278,12 +278,16 @@
                         <br><h4><strong>Kotaro's revenge</strong> </h4>
                         <p style="font-size: 20px">- A brawler type of game in a 3d city where you need to fight the MEGACORP, an organisation that killed your sensei !</p>
                         <p style="font-size: 20px">- We were a team of 4 game designers, we have conceptualised the game and the gameplay. I was in charge of the developement and animations of the player. I also created developing tools</p>
+                        <a class="btn linkbtn aboutlink" style="background-color: #8d897f94; cursor:not-allowed;">
+                            Project available soon
+                        </a>   
                         <img class="image-icon-little" src="https://cdn-icons-png.flaticon.com/512/5969/5969205.png"/> <img class="image-icon-little" src="https://img.icons8.com/ios-filled/500/autodesk-maya.png"/> <img class="image-icon-little" src="https://cdn-icons-png.flaticon.com/512/25/25231.png"/>
                     </div>
                 </div>
                 <br>
                 <br>
                 <br>
+                <hr class="bookends">
                 <br>
                 <br>
                 <br>
@@ -308,12 +312,16 @@
                         <h4><strong>Space driver</strong> </h4>
                         <p style="font-size: 20px">- A mobile space game where you need to explore planets generated proceduraly and solves missions</p>
                         <p style="font-size: 20px">- The game is played with only one input, this was the main challenge of the project !</p>
+                        <a target="_blank" href="https://img.itch.zone/aW1nLzg2MDkxNjkucG5n/315x250%23c/yl8tqD.png"  class="btn linkbtn aboutlink">
+                            Try here
+                        </a>  
                         <img class="image-icon-little" src="https://cdn-icons-png.flaticon.com/512/5969/5969205.png"/> <img class="image-icon-little" src="https://img.icons8.com/ios-filled/500/autodesk-maya.png"/>  <img class="image-icon-little" src="https://cdn-icons-png.flaticon.com/512/731/731965.png"/>
                     </div>
                 </div>   
                 <br>
                 <br>
                 <br>
+                <hr class="bookends">
                 <br>
                 <br>
                 <br>
@@ -335,6 +343,9 @@
                         <p style="font-size: 20px">- A 2.5D game, is a kind of game where the player can only move on 2 dimensions but can go from one plan to another!</p>
                         <p style="font-size: 20px">- The game is a racing type of game that can be played in multiplayer, where you need to do 3 turns of the track to win.</p>
                         <p style="font-size: 20px">- It was made with a team of 3 developers, 1 Music and sound designer and 5 game designers</p>
+                        <a target="_blank" href="https://is02ac.itch.io/roller-rush-street-shift"  class="btn linkbtn aboutlink">
+                            Try here
+                        </a>  
                         <img class="image-icon-little" src="https://cdn-icons-png.flaticon.com/512/5969/5969205.png"/> <img class="image-icon-little" src="https://img.icons8.com/ios-filled/500/autodesk-maya.png"/> <img class="image-icon-little" src="https://cdn-icons-png.flaticon.com/512/731/731965.png"/> <img class="image-icon-little" src="https://cdn-icons-png.flaticon.com/512/25/25231.png"/>
                     </div>
                 </div>           
