--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div id="sectionhero" class="sectionblock">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6 pr-0 mr-0 pl-lg-0 pr-lg-5 mr-lg-0 mt-3 mt-lg-0 align-items-center justify-content-center align-items-lg-left justify-content-lg-left text-center text-lg-left d-flex order-1 order-lg-0 ">
+                    <div class="col-lg-12 pr-0 mr-0 pl-lg-0 pr-lg-5 mr-lg-0 mt-3 mt-lg-0 align-items-center justify-content-center align-items-lg-center justify-content-lg-center text-center text-lg-center d-flex order-1 order-lg-0 ">
                         <div class="infohero ">
                             <p class="infohero__p">Hello, i'm</p>
                             <h1 class="infohero__title">Isaac
@@ -93,11 +93,6 @@
                             </h1>
                             <span id="typed-text"></span>
                             <span class="cursor blink">&nbsp;</span>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 text-center order-0 order-lg-1 mb-5 mb-lg-0">
-                        <div class="heroimg">
-                            <img src="./asset/portfolio/pdp.png" alt="poto" class="img-fluid heroimg__poto" />
                         </div>
                     </div>
                 </div>
@@ -117,6 +112,36 @@
                 <div class="row">
                     <div class="col-lg-3 text-center text-lg-left">
                         <div class="abouthero">
+                            <h3  width="350px" style="white-space: nowrap; font-size: 37px">Tenders Fight</h3>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 pl-lg-5 text-center text-lg-left">
+                        <img src="https://cdn.cloudflare.steamstatic.com/steam/apps/2374010/header.jpg?t=1680244253" width="350px" style="background-color: black;border-radius: 4px "/>
+                    </div>
+                    <div class="col-lg-4 pl-lg-6 text-center text-lg-left">
+                        <iframe width="350" height="196.875" style="background-color: black;border-radius: 4px ; margin-left: 64px;" src= "https://www.youtube.com/embed/A6cgf0pnZmU?rel=0&autoplay=1&controls=0&mute=1&loop=1&list=PL7hoLfyucxi4xQLEJAlt4lbvfKqXg9heM&index=1" frameborder= "0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                    <div class="col-lg-3 text-center text-lg-left"></div>
+                    <div class="col-lg-9 pl-lg-5 text-center text-lg-left">
+                        <br><h4><strong>Tenders Fight</strong> </h4>
+                        <p style="font-size: 20px">- A First person fighter in space</p>
+                        <p style="font-size: 20px">- First game on steam !</p>
+                        <a target="_blank" href="https://store.steampowered.com/app/2374010/Tenders_fight/"  class="btn linkbtn aboutlink">
+                            Try here
+                        </a> 
+                        <img class="image-icon-little" src="https://cdn-icons-png.flaticon.com/512/5969/5969205.png"/> <img class="image-icon-little" src="https://img.icons8.com/ios-filled/500/autodesk-maya.png"/> <img class="image-icon-little" src="https://cdn-icons-png.flaticon.com/512/25/25231.png"/>
+                    </div>
+                </div>
+                <br>
+                <br>
+                <br>
+                <hr class="bookends">
+                <br>
+                <br>
+                <br>
+                <div class="row">
+                    <div class="col-lg-3 text-center text-lg-left">
+                        <div class="abouthero">
                             <h3 style="white-space: nowrap; font-size: 37px">3D brawler</h3>
                         </div>
                     </div>
@@ -131,9 +156,9 @@
                         <br><h4><strong>Kotaro's revenge</strong> </h4>
                         <p style="font-size: 20px">- A brawler type of game in a 3d city where you need to fight the MEGACORP, an organisation that killed your sensei !</p>
                         <p style="font-size: 20px">- We were a team of 4 game designers, we have conceptualised the game and the gameplay. I was in charge of the developement and animations of the player. I also created developing tools</p>
-                        <a class="btn linkbtn aboutlink" style="background-color: #8d897f94; cursor:not-allowed;">
-                            Project available soon
-                        </a>   
+                        <a target="_blank" href="https://moussa-neggaz.itch.io/kotaros-revenge"  class="btn linkbtn aboutlink">
+                            Try here
+                        </a> 
                         <img class="image-icon-little" src="https://cdn-icons-png.flaticon.com/512/5969/5969205.png"/> <img class="image-icon-little" src="https://img.icons8.com/ios-filled/500/autodesk-maya.png"/> <img class="image-icon-little" src="https://cdn-icons-png.flaticon.com/512/25/25231.png"/>
                     </div>
                 </div>
@@ -165,7 +190,7 @@
                         <h4><strong>Space driver</strong> </h4>
                         <p style="font-size: 20px">- A mobile space game where you need to explore planets generated proceduraly and solves missions</p>
                         <p style="font-size: 20px">- The game is played with only one input, this was the main challenge of the project !</p>
-                        <a target="_blank" href="https://img.itch.zone/aW1nLzg2MDkxNjkucG5n/315x250%23c/yl8tqD.png"  class="btn linkbtn aboutlink">
+                        <a target="_blank" href="https://is02ac.itch.io/space-driver"  class="btn linkbtn aboutlink">
                             Try here
                         </a>  
                         <img class="image-icon-little" src="https://cdn-icons-png.flaticon.com/512/5969/5969205.png"/> <img class="image-icon-little" src="https://img.icons8.com/ios-filled/500/autodesk-maya.png"/>  <img class="image-icon-little" src="https://cdn-icons-png.flaticon.com/512/731/731965.png"/>
